--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,11 +1,14 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Back', pins_path %>
+
 <p>
   <strong>Description:</strong>
   <%= @pin.description %>
 </p>
 
 <% if @pin.user == current_user %>
-  <%= link_to 'Edit', edit_pin_path(@pin) %> |
+  <%= link_to edit_pin_path(@pin) do %>
+  <span class="glyphicon glyphicon-edit"></span>
+  Edit
 <% end %>
-<%= link_to 'Back', pins_path %>
